-nlog fixing contunie

--- a/MoviesAppWeb/nlog.config
+++ b/MoviesAppWeb/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Info"
+      internalLogLevel="Trace"
       internalLogFile="C:\Users\MONSTER\source\repos\MovieAppCase\MoviesAppWeb\Logs\internal-nlog-AspNetCore.txt">
 
   <!-- enable asp.net core layout renderers -->
@@ -26,7 +26,9 @@
     <target
       name="database"
       xsi:type="Database"
-    connectionString="${var:connectionString}">
+    >
+
+      <connectionString>server=.\SQLSERVERLOCAL;Database=MoviesAppWeb-7ddea1ee-2717-46ce-8ed2-a3fe67ff6059;Trusted_Connection=True;MultipleActiveResultSets=true;</connectionString>
       <commandText>
         insert into dbo.Log (
         MachineName, Logged, Level, Message,
@@ -52,11 +54,10 @@
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
-    <logger name="*" minlevel="Trace" writeTo="database" />
+    <logger name="*" minlevel="Trace" writeTo="allfile, database" />  
 
     <!--Output hosting lifetime messages to console target for faster startup detection -->
-    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web" final="true" />
+    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web, database" final="true" />
 
     <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
     <logger name="Microsoft.*" maxlevel="Info" final="true" />
