--- a/MoviesAppWeb/nlog.config
+++ b/MoviesAppWeb/nlog.config
@@ -2,12 +2,13 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Trace"
+      internalLogLevel="Info"
       internalLogFile="C:\Users\MONSTER\source\repos\MovieAppCase\MoviesAppWeb\Logs\internal-nlog-AspNetCore.txt">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
+    <add assembly="NLog.Database" />
   </extensions>
 
   <!-- the targets to write to -->
@@ -23,14 +24,12 @@
     <!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
     <target xsi:type="Console" name="lifetimeConsole" layout="${MicrosoftConsoleLayout}" />
 
-    <target
-      name="database"
-      xsi:type="Database"
-    >
-
-      <connectionString>server=.\SQLSERVERLOCAL;Database=MoviesAppWeb-7ddea1ee-2717-46ce-8ed2-a3fe67ff6059;Trusted_Connection=True;MultipleActiveResultSets=true;</connectionString>
+    <target      
+      xsi:type="Database" 
+       name="dbApp"     
+       connectionString="${var:connectionString}">
       <commandText>
-        insert into dbo.Log (
+        INSERT INTO dbo.Log (
         MachineName, Logged, Level, Message,
         Logger, Exception
         ) values (
@@ -54,15 +53,7 @@
   <!-- rules to map from logger name to target -->
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile, database" />  
-
-    <!--Output hosting lifetime messages to console target for faster startup detection -->
-    <logger name="Microsoft.Hosting.Lifetime" minlevel="Info" writeTo="lifetimeConsole, ownFile-web, database" final="true" />
-
-    <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
-    <logger name="Microsoft.*" maxlevel="Info" final="true" />
-    <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
-
-    <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
+    <logger name="*" minlevel="Info" writeTo="dbApp, allfile,ownFile-web" />
+  
   </rules>
 </nlog>
